--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="FgZ-Jn-4yT" id="dRo-Qm-gSZ"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="XNs-bx-QHB"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="XNs-bx-QHB">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Mgz-Mu-Cmw">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="FgZ-Jn-4yT" id="EdU-8q-6SQ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IV4-Ya-z2w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
